﻿----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2005-11-02 Michal Čihař  <michal@cihar.com>
    * config.default.php: This is not a configuration file.
    * config.default.php, Documentation.html, libraries/common.lib.php: Use
      $cfg['Servers'][1] from config.default.php as defaults for settings in
      config.inc.php (bug #1330847).

2005-11-02 Sebastian Mendel <cybot_tm@users.sourceforge.net>
    * libraries/dbg/setup.php:
      - display error in error box
      - fixed 'not defined function'
    * libraries/dbg/profiling.php:
      - minor fixes: html output, speed, rtl lang
    * tbl_realtion.php:
      - fixed html output of table
      - used fieldset for forms
    * libraries/common.lib.php, browse_foreigners.php:
      - replaced $cfg['Bgcolor*'] with classes
      - make use of fieldset
    * css/print.css, dbv_datadict.php:
      - replaced $cfg['Bgcolor*'] with classes
      - reduced output size by 40%
    * libraries/display_create_tbl.php
      - XHTML compl.
      - added class icon
      
2005-11-01 Marc Delisle  <lem9@users.sourceforge.net>
    * server_privileges.php: undefined variable when changing a password

2005-11-01 Sebastian Mendel <cybot_tm@users.sourceforge.net>
    * libraries/common.lib.php:
      bug #1342332 Error messages wrongly formatted.
    * themes/*/css/theme_right.css.php:
       - fixed some rtl languages issues
       - added style for notice box (server_export.php)

2005-10-31 Sebastian Mendel <cybot_tm@users.sourceforge.net>
	* themes/*/css/theme_right.css.php:
	   - use right image path
	   - fixed icon alignment for rtl languages
	* main.php, phpmyadmin.css.php, libraries/mysql_charsets.lib.php:
	   - fixed some rtl language issues
	* favicon.ico: changed icon
	
2005-10-31 Marc Delisle  <lem9@users.sourceforge.net>
    * server_privileges.php: do not display No under the Password column
      if this is not a "real user" definition

2005-10-31 Michal Čihař  <michal@cihar.com>